--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,31 @@
 <dependencies>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>3.4.0</version>
+        <artifactId>selenium-server</artifactId>
+        <version>${selenium-server.version}</version>
     </dependency>
 
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>${junit.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>info.cukes</groupId>
+        <artifactId>cucumber-java</artifactId>
+        <version>${cucumber.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>info.cukes</groupId>
+        <artifactId>cucumber-junit</artifactId>
+        <version>${cucumber.version}</version>
     </dependency>
 
 </dependencies>
+    <properties>
+        <selenium-server.version>3.6.0</selenium-server.version>
+        <junit.version>4.12</junit.version>
+        <cucumber.version>1.2.5</cucumber.version>
+    </properties>
 </project>
